[gd_scene load_steps=44 format=3 uid="uid://6b22yls05sfo"]

[ext_resource type="Script" uid="uid://10hluvv3nr8m" path="res://Objects/Battle/Units/box.gd" id="1_qofug"]
[ext_resource type="Script" uid="uid://bm4nsiwwu5loj" path="res://Objects/Battle/Units/Components/melee_weapon_res.gd" id="2_h6a7m"]
[ext_resource type="Script" uid="uid://c54axabaeba3m" path="res://Objects/Battle/Units/Components/weapons_data.gd" id="3_a13h5"]
[ext_resource type="PackedScene" uid="uid://um3vkkvxmmu8" path="res://Objects/Battle/Units/Components/States/state_machine_unit.tscn" id="4_1q1j5"]
[ext_resource type="PackedScene" uid="uid://drxlf76g7y02i" path="res://Objects/General/debug_personal.tscn" id="4_iawob"]
[ext_resource type="Script" uid="uid://b6du0i34uon36" path="res://Objects/Battle/Units/Components/marker2d.gd" id="4_ydajr"]
[ext_resource type="Script" uid="uid://dbemwnrfhae8b" path="res://Objects/Battle/Units/Components/States/state_machine_unit.gd" id="5_l12bb"]
[ext_resource type="PackedScene" uid="uid://cfoob5wajb3oh" path="res://Objects/Battle/position_node.tscn" id="5_ylt6l"]
[ext_resource type="PackedScene" uid="uid://c8d1cik7puqb7" path="res://Objects/Battle/Units/Components/States/Movement/standing.tscn" id="6_es1re"]
[ext_resource type="PackedScene" uid="uid://5c28leuwubim" path="res://Objects/Battle/Units/Components/States/Movement/moving.tscn" id="7_8tmgh"]
[ext_resource type="Texture2D" uid="uid://dygk7pshwpjxs" path="res://Assets/units/unit_base_256.png" id="7_8vhi0"]
[ext_resource type="Script" uid="uid://tw4q2u053vvl" path="res://Objects/Battle/Units/Components/States/Movement/standing.gd" id="7_reaek"]
[ext_resource type="Script" uid="uid://dyvxjhrtpopkw" path="res://Objects/Battle/Units/Components/States/Movement/moving.gd" id="8_i2sjp"]
[ext_resource type="Texture2D" uid="uid://dq25jkico4xr3" path="res://Assets/units/unit_default_icon_256.png" id="8_w8el5"]
[ext_resource type="PackedScene" uid="uid://d36xvgk6bupeg" path="res://Objects/Battle/Units/Components/States/Actions/melee.tscn" id="9_7htkm"]
[ext_resource type="Script" uid="uid://rnanj2fx828j" path="res://Objects/Battle/Units/Components/weapons_manager.gd" id="9_g067s"]
[ext_resource type="PackedScene" uid="uid://p8ylimmy7ksu" path="res://Objects/Battle/Units/Components/States/Movement/chasing.tscn" id="10_2f7re"]
[ext_resource type="Script" uid="uid://cg3ppuoigwycp" path="res://Objects/Battle/Units/Components/States/Actions/melee.gd" id="10_3i0ns"]
[ext_resource type="PackedScene" uid="uid://ylpovsehjr8l" path="res://Objects/Battle/Units/Components/melee_weapon.tscn" id="10_t6p8w"]
[ext_resource type="PackedScene" uid="uid://dwru5o0lqlwmd" path="res://Objects/Battle/Units/Components/range_weapon.tscn" id="11_j1ocp"]
[ext_resource type="PackedScene" uid="uid://q8bal8y5hv82" path="res://Objects/Battle/Units/Components/States/Movement/fleeing.tscn" id="11_w8jca"]
[ext_resource type="Script" uid="uid://f6ga0l202qm3" path="res://Objects/Battle/Units/Components/States/Movement/chasing.gd" id="12_6i05j"]
[ext_resource type="PackedScene" uid="uid://caxy8pxdp4ks7" path="res://Objects/Battle/Units/Components/move_component.tscn" id="12_astyu"]
[ext_resource type="Script" uid="uid://tx2lfb072afv" path="res://Objects/Battle/Units/Components/HurtBoxComponent.gd" id="13_238ts"]
[ext_resource type="PackedScene" uid="uid://by4wbcccust50" path="res://Objects/Battle/Units/Components/States/Actions/waiting.tscn" id="13_e8jt4"]
[ext_resource type="Script" uid="uid://ls67nt7s6im1" path="res://Objects/Battle/Units/Components/States/Movement/fleeing.gd" id="14_1bj2m"]
[ext_resource type="PackedScene" uid="uid://d1y7cah7fc235" path="res://Objects/Battle/Units/Components/unit_detector.tscn" id="14_3mp3t"]
[ext_resource type="PackedScene" uid="uid://ci1cysie5sbg" path="res://Objects/Battle/Units/Components/hurt_box.tscn" id="14_d14jk"]
[ext_resource type="Script" uid="uid://bqcv4jdwhux04" path="res://Objects/Battle/Units/Components/States/Actions/waiting.gd" id="14_txydp"]
[ext_resource type="PackedScene" uid="uid://bsr7edxn36gf7" path="res://Objects/Battle/Units/Components/States/Actions/firing.tscn" id="15_eycdx"]
[ext_resource type="Script" uid="uid://4iyf15c37feb" path="res://Objects/Battle/Units/Components/HitBoxComponent.gd" id="15_u43wy"]

[sub_resource type="Resource" id="Resource_xp73p"]
script = ExtResource("2_h6a7m")
weapon = "Sword"
base_attack = 1
base_charge = 1
anti_cabalry_bonus = 0.0

[sub_resource type="Resource" id="Resource_5vxcj"]
script = ExtResource("3_a13h5")
primary_type = "Melee"
primary_weapon = SubResource("Resource_xp73p")
separator = "                  "
secondary_type = ""

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbuut"]
size = Vector2(252, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uw6ii"]
size = Vector2(179, 76.9999)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pbqt"]
size = Vector2(256, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xso6r"]
size = Vector2(188, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwdb2"]
size = Vector2(15.25, 143)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfmv0"]
size = Vector2(118, 74.0004)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88m4m"]
size = Vector2(18, 142.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8c0sl"]
size = Vector2(117, 84.9998)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tow0k"]
size = Vector2(78, 4.24825)

[sub_resource type="CircleShape2D" id="CircleShape2D_cwm1q"]
radius = 1000.0

[node name="Box" type="CharacterBody2D" node_paths=PackedStringArray("moveComponent") groups=["units"]]
z_index = 10
z_as_relative = false
collision_layer = 4
collision_mask = 4
slide_on_ceiling = false
script = ExtResource("1_qofug")
weaponsData = SubResource("Resource_5vxcj")
moveComponent = NodePath("MoveComponent")
metadata/_edit_horizontal_guides_ = [-73.0]

[node name="StateMachine" parent="." node_paths=PackedStringArray("unit_owner") instance=ExtResource("4_1q1j5")]
unique_name_in_owner = true
script = ExtResource("5_l12bb")
unit_owner = NodePath("..")

[node name="StateMovement" type="Node" parent="StateMachine"]
unique_name_in_owner = true

[node name="Standing" parent="StateMachine/StateMovement" instance=ExtResource("6_es1re")]
unique_name_in_owner = true
script = ExtResource("7_reaek")

[node name="Moving" parent="StateMachine/StateMovement" instance=ExtResource("7_8tmgh")]
unique_name_in_owner = true
script = ExtResource("8_i2sjp")

[node name="Chasing" parent="StateMachine/StateMovement" instance=ExtResource("10_2f7re")]
unique_name_in_owner = true
script = ExtResource("12_6i05j")

[node name="Fleeing" parent="StateMachine/StateMovement" instance=ExtResource("11_w8jca")]
unique_name_in_owner = true
script = ExtResource("14_1bj2m")

[node name="StateAction" type="Node" parent="StateMachine"]
unique_name_in_owner = true

[node name="Waiting" parent="StateMachine/StateAction" instance=ExtResource("13_e8jt4")]
unique_name_in_owner = true
script = ExtResource("14_txydp")

[node name="Melee" parent="StateMachine/StateAction" instance=ExtResource("9_7htkm")]
unique_name_in_owner = true
script = ExtResource("10_3i0ns")

[node name="Firing" parent="StateMachine/StateAction" instance=ExtResource("15_eycdx")]
unique_name_in_owner = true

[node name="SelectedPolygon" type="Polygon2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(2, 1)
scale = Vector2(1.02, 1.105)
color = Color(0.109804, 1, 0.0784314, 1)
polygon = PackedVector2Array(-130, 80, -132, 75, -132, -76, -131, -80, -129, -83, -124, -84, 122.738, -84, 127, -83, 131, -79, 132, -75, 132.946, 76.3192, 131, 80, 128, 83, 124, 84, -124, 85, -128, 83)
metadata/_edit_lock_ = true

[node name="DebugPersonal" parent="." instance=ExtResource("4_iawob")]
scale = Vector2(1.41281, 1.32819)
property_1 = "name"
property_3 = "global_position"
property_4 = "hovered"
property_5 = "selected"
property_6 = "rotation"

[node name="MarginMarker" parent="DebugPersonal/Node/MarkerBase" index="0"]
position = Vector2(-210, -294)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(98, -189)
script = ExtResource("4_ydajr")
metadata/_edit_lock_ = true

[node name="Node" type="Node" parent="Marker2D"]

[node name="NameLabel" type="Label" parent="Marker2D/Node"]
unique_name_in_owner = true
visible = false
z_index = 1000
z_as_relative = false
offset_left = 98.0
offset_top = -189.0
offset_right = 185.0
offset_bottom = -119.0
theme_override_font_sizes/font_size = 48
text = "Box"

[node name="Position" parent="Marker2D" instance=ExtResource("5_ylt6l")]

[node name="SpriteBase" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, 1)
texture = ExtResource("7_8vhi0")

[node name="SpriteType" type="Sprite2D" parent="SpriteBase"]
unique_name_in_owner = true
texture = ExtResource("8_w8el5")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, 0)
texture = ExtResource("7_8vhi0")

[node name="Weapons" type="Node2D" parent="."]
script = ExtResource("9_g067s")
MeleeWeaponP = ExtResource("10_t6p8w")
RangeWeaponP = ExtResource("11_j1ocp")
metadata/_edit_lock_ = true

[node name="MoveComponent" parent="." node_paths=PackedStringArray("unit") instance=ExtResource("12_astyu")]
unit = NodePath("..")

[node name="HurtBoxComponent" type="Marker2D" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("13_238ts")
metadata/_edit_lock_ = true

[node name="Front" parent="HurtBoxComponent" instance=ExtResource("14_d14jk")]
unique_name_in_owner = true
position = Vector2(0, -71)

[node name="CollisionShape2D" parent="HurtBoxComponent/Front" index="0"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_jbuut")

[node name="MeleePoint" parent="HurtBoxComponent/Front" index="1"]
position = Vector2(0, -97)
rotation = 3.14159
metadata/_edit_group_ = true

[node name="CollisionShape2D2" parent="HurtBoxComponent/Front/MeleePoint/CheckSpace" index="0"]
shape = SubResource("RectangleShape2D_uw6ii")

[node name="Back" parent="HurtBoxComponent" instance=ExtResource("14_d14jk")]
position = Vector2(-1, 65)

[node name="CollisionShape2D" parent="HurtBoxComponent/Back" index="0"]
position = Vector2(3, 14.5)
shape = SubResource("RectangleShape2D_6pbqt")

[node name="MeleePoint" parent="HurtBoxComponent/Back" index="1"]
position = Vector2(2, 106)
metadata/_edit_group_ = true

[node name="CollisionShape2D2" parent="HurtBoxComponent/Back/MeleePoint/CheckSpace" index="0"]
shape = SubResource("RectangleShape2D_xso6r")

[node name="Left" parent="HurtBoxComponent" instance=ExtResource("14_d14jk")]
position = Vector2(-104, 0)

[node name="CollisionShape2D" parent="HurtBoxComponent/Left" index="0"]
position = Vector2(-14.625, 1.5)
shape = SubResource("RectangleShape2D_hwdb2")

[node name="MeleePoint" parent="HurtBoxComponent/Left" index="1"]
position = Vector2(-107, 0)
rotation = 1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D2" parent="HurtBoxComponent/Left/MeleePoint/CheckSpace" index="0"]
shape = SubResource("RectangleShape2D_sfmv0")

[node name="Right" parent="HurtBoxComponent" instance=ExtResource("14_d14jk")]
position = Vector2(103, 0)

[node name="CollisionShape2D" parent="HurtBoxComponent/Right" index="0"]
position = Vector2(18, 1.75)
shape = SubResource("RectangleShape2D_88m4m")

[node name="MeleePoint" parent="HurtBoxComponent/Right" index="1"]
position = Vector2(115, 0)
rotation = 4.71239
metadata/_edit_group_ = true

[node name="CollisionShape2D2" parent="HurtBoxComponent/Right/MeleePoint/CheckSpace" index="0"]
shape = SubResource("RectangleShape2D_8c0sl")

[node name="HitBoxComponent" type="Marker2D" parent="."]
visible = false
script = ExtResource("15_u43wy")
metadata/_edit_lock_ = true

[node name="Hitbox" type="Area2D" parent="HitBoxComponent"]
position = Vector2(-2, -74)
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent/Hitbox"]
visible = false
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_tow0k")

[node name="Timer" type="Timer" parent="HitBoxComponent"]
wait_time = 0.5
one_shot = true

[node name="ShowDirection" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-24, -96, 0, -112, 24, -96)
metadata/_edit_lock_ = true

[node name="RangeOfAttack" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
monitorable = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeOfAttack"]
shape = SubResource("CircleShape2D_cwm1q")
debug_color = Color(1, 1, 1, 0.0784314)

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -175.0
offset_top = -191.0
offset_right = -127.0
offset_bottom = -165.0
scale = Vector2(3, 3)
text = "<null>"

[node name="UnitDetector" parent="." instance=ExtResource("14_3mp3t")]
unique_name_in_owner = true
process_mode = 3
collision_mask = 0
metadata/_edit_lock_ = true

[connection signal="area_entered" from="HitBoxComponent/Hitbox" to="HitBoxComponent" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="HitBoxComponent/Hitbox" to="HitBoxComponent" method="_on_area_2d_area_exited"]
[connection signal="timeout" from="HitBoxComponent/Timer" to="HitBoxComponent" method="_on_timer_timeout"]
[connection signal="area_entered" from="RangeOfAttack" to="." method="_on_range_of_attack_area_entered"]
[connection signal="area_exited" from="RangeOfAttack" to="." method="_on_range_of_attack_area_exited"]
[connection signal="mouse_entered" from="UnitDetector" to="." method="_on_unit_detector_mouse_entered"]
[connection signal="mouse_exited" from="UnitDetector" to="." method="_on_unit_detector_mouse_exited"]

[editable path="DebugPersonal"]
[editable path="HurtBoxComponent/Front"]
[editable path="HurtBoxComponent/Back"]
[editable path="HurtBoxComponent/Left"]
[editable path="HurtBoxComponent/Right"]
[editable path="UnitDetector"]
